tests/ui/feature-gates/issue-43106-gating-of-unstable.stderr
error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:7:1
   |
LL | #![unstable()]
   | ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-unstable.rs:7:1
   |
LL | #![unstable()]
   | ^^^^^^^^^^^^^^

error[E0547]: missing 'issue'
  --> $DIR/issue-43106-gating-of-unstable.rs:7:1
   |
LL | #![unstable()]
   | ^^^^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:12:1
   |
LL | #[unstable()]
   | ^^^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-unstable.rs:12:1
   |
LL | #[unstable()]
   | ^^^^^^^^^^^^^

error[E0547]: missing 'issue'
  --> $DIR/issue-43106-gating-of-unstable.rs:12:1
   |
LL | #[unstable()]
   | ^^^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:18:9
   |
LL |         #![unstable()]
   |         ^^^^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-unstable.rs:18:9
   |
LL |         #![unstable()]
   |         ^^^^^^^^^^^^^^

error[E0547]: missing 'issue'
  --> $DIR/issue-43106-gating-of-unstable.rs:18:9
   |
LL |         #![unstable()]
   |         ^^^^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:24:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-unstable.rs:24:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^

error[E0547]: missing 'issue'
  --> $DIR/issue-43106-gating-of-unstable.rs:24:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:30:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-unstable.rs:30:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^

error[E0547]: missing 'issue'
  --> $DIR/issue-43106-gating-of-unstable.rs:30:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:36:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-unstable.rs:36:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^

error[E0547]: missing 'issue'
  --> $DIR/issue-43106-gating-of-unstable.rs:36:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^

error[E0658]: stability attributes may not be used outside of the standard library
  --> $DIR/issue-43106-gating-of-unstable.rs:42:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^
   |
   = help: add `#![feature(staged_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0546]: missing 'feature'
  --> $DIR/issue-43106-gating-of-unstable.rs:42:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^

error[E0547]: missing 'issue'
  --> $DIR/issue-43106-gating-of-unstable.rs:42:5
   |
LL |     #[unstable()]
   |     ^^^^^^^^^^^^^

error: aborting due to 21 previous errors

Some errors have detailed explanations: E0546, E0547, E0658.
For more information about an error, try `rustc --explain E0546`.
